frontend/test/should_fail/index_exec_edge_fromIndexFromTo_argument_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:double)
{
	{ i:set<AEdge>=edgesFromIndexFromTo(bari, j, 42) }
}
